update with test elements

--- a/Source/40kFauna/40kFauna/40kFauna.csproj
+++ b/Source/40kFauna/40kFauna/40kFauna.csproj
@@ -53,6 +53,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SalamaderFire.cs" />
+    <Compile Include="SaeneytiCharge.cs" />
     <Compile Include="HatcherHorde.cs" />
     <Compile Include="HeddiffGiverGoJuice.cs" />
     <Compile Include="Properties\40kFauna.cs" />
