--- a/Source/40kFauna/40kFauna/40kFauna.csproj
+++ b/Source/40kFauna/40kFauna/40kFauna.csproj
@@ -56,6 +56,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FerroDiet.cs" />
     <Compile Include="GroxAttack.cs" />
     <Compile Include="SalamaderFire.cs" />
     <Compile Include="SaeneytiCharge.cs" />
