Small tex updates

--- a/Source/40kFauna/40kFauna/40kFauna.csproj
+++ b/Source/40kFauna/40kFauna/40kFauna.csproj
@@ -56,6 +56,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DjemjaFalak.cs" />
+    <Compile Include="KhymeraHorror.cs" />
     <Compile Include="FerroBeastFood\JobDriver_Ingest_Ferro.cs" />
     <Compile Include="FerroBeastFood\FerroFoods.cs" />
     <Compile Include="FerroBeastFood\JobGiver_GetFood_Ferro.cs" />
