--- a/Source/40kFauna/40kFauna/40kFauna.csproj
+++ b/Source/40kFauna/40kFauna/40kFauna.csproj
@@ -56,6 +56,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CatachanDevil.cs" />
     <Compile Include="DjemjaFalak.cs" />
     <Compile Include="WarpSpawnDeath.cs" />
     <Compile Include="FerroBeastFood\JobDriver_Ingest_Ferro.cs" />
