--- a/Source/40kFauna/40kFauna/40kFauna.csproj
+++ b/Source/40kFauna/40kFauna/40kFauna.csproj
@@ -56,6 +56,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="WarpRift.cs" />
+    <Compile Include="PheromonePop.cs" />
     <Compile Include="DefReferences.cs" />
     <Compile Include="Events\KhymeraAttack.cs" />
     <Compile Include="Events\LocustSwarm.cs" />
